groomers_ui/src/css/style.css
/* ... */
.scroll__container, .scroll2__container {
    margin-bottom: 50px;
    display: flex;
    justify-content: center;    
    flex-direction: column;
}

.scroll__container {
    align-items: center;
}

.scroll2 {
    position: relative;
    margin: 0 auto;
    width: 100vw;
    height: 50px;
    margin-top: 50px;
}

.scroll2__container {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.scroll__container p, .scroll2__container p {
    margin-bottom: 20px;
    font-size: 1rem;
    font-family: avenirregular, arial, cursive;
    font-style: normal;
    font-weight: 300;
}

.scroll__sepa {
    height: 30px;
    width: 1px;
    background-color: var(--typo)!important;
    animation: 4s ease infinite scrollInfo;
}

.social {
    position: absolute;
    right: 0;
    top: 85vh;
}

.social__container {
    display: flex;
    align-items: center;
}

.social__container p {
    margin-right: 50px;
    
}

.compteurSlide {
    margin-right: 30px;
    font-family: essonnes-display, serif;
    font-style: normal;
    font-weight: 300;
    display: flex;
    align-items: flex-start;
}

.compteurSlide span:nth-child(1) {
    color: white;
    opacity: 1!important;
}

.compteurNumber {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 20px;
    height: 25px;
    overflow: hidden;
    transform: translateY(0px);
    transition: all 0.3s;
}

.compteurNumber span{
    transition: all 0.3s;
}

.maxCompteur{
    opacity: 0.5;
}

.controls__container p:hover:nth-child(2) .compteurNumber {
    transform: translateY(-25px);
}


.social i {
    color: white;
    font-size: 1.5rem;
    margin: 20px;
}

/* Section coiffure */

.coif__container {
    display: grid;
    -ms-display: grid;
    grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
    justify-content: space-between;
    align-items: center;
    grid-gap: 100px;
}

.coif__block {
    display: flex;
    flex-direction: column;
}

.coif__block img {
    transform-origin: bottom;
}

.coif__block h4 {
    font-size: 2rem;
    text-transform: uppercase;
    margin-top: 25px;
    font-family: essonnes-display, serif;
    font-style: normal;
    font-weight: 300;
}

.coif__block p {
    font-size: 1rem;
    color: #D0D0D0;
    margin: 6px 0px;
    opacity: 0.3;
    font-family: avenirregular, arial, cursive;
    font-weight: 200;
}

.coif__block a {
    display: inline-block;
    font-family: avenirregular, arial, cursive;
    font-weight: 200;
}

.add {
    margin-top: 100px;
    display: inline-block;
    font-family: avenirregular, arial, cursive;
    font-weight: 200;
}


/* Slider tarifs */

.slider__wrapper, .slider__wrapper2 {
    /* the outer div */
    position: relative;
    left:0%;
    background: none;
    width: 99.9%;
    height: 130px;
    overflow: hidden;
    font-family:quakiezdisplay, arial, cursive;

}

.slider__list, .slider__list2 {
    position: relative;
    display: inline-block;
    list-style: none;
    padding:0;
    margin:0;
}

.slider__list.cloned, .slider__list2.cloned {
    position: absolute;
    top: 0px;
    left: 0px;
}

.slider__list li, .slider__list2 li {
    float: left;
    padding-left: 20px;
    color: white;
    font-size: 8rem;
    text-transform: uppercase;
}

/* Section tarifs */


.tarifs__controller {
    display: flex;
    justify-content: space-around;
    margin-bottom: 100px;
}

.tarifs__controller h3 {
    color: white;
    opacity: 40%;
    font-size: 3rem;
    cursor: pointer;
    transition: all 0.3s ease;
    font-family:quakiezdisplay, arial, cursive;
    font-weight: 200;
}

.tarifs__controller h3:hover {
    opacity: 80%;
}


.tarifs__controller .active {
    color: white;
    opacity: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.tarifs__controller .active::after {
    content: "";
    margin-top: 15px;
    height: 5px;
    width: 5px;
    background-color: var(--typo);
    border-radius: 100px;
}

.tarifs__content {
    width: 100%;
    margin-top: 60px;
    background-color: rgba(255, 255, 255, 0.1);
}

.table__container {
    width: 100%;
    font-family: essonnes-display, serif;
    padding-bottom: 30px
}

.table__container a {
    padding: 0px 50px;
    opacity: 0.5;
}



.table__header {
    padding-top: 50px;
}

.table__header h3 {
    width: 300px!important;
    max-width: auto;
    color: var(--secondaire)!important;
    text-transform: uppercase;
    font-size: 1.2rem;
}

.table__ligne {
    margin: 30px 0px;
    padding: 0px 50px;
}

.table__ligne, .table__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.table__ligne p:first-child {
    color: var(--typo)!important;
    font-size: 1.6rem;
    font-family: essonnes-display, serif;
}

.table__ligne p {
    font-size: 1.2rem;
    color: var(--secondaire)!important;
    font-family: avenirregular, arial, cursive;
}

.table__ligne p, .table__header h3 {
    min-width: 250px;
    text-align: center;
}

.table__header h3:first-child, .table__ligne p:first-child {
    text-align: left!important;
}

/* Section équipe */

.container__slider {
    width: 100%!important;
}

  
.coiffeur__container {
    position: relative;
    width: 100%;
    z-index: 2;
}
  
::-webkit-scrollbar {
      display: none;
}
  
.coiffeurs {
    display: flex;
    overflow-x: scroll;
    white-space: nowrap;
    transform: scale(1);
    will-change: transform;
    user-select: none;
    cursor: grab;
    white-space: nowrap;
    transition: all 0.2s;
    overflow-y: hidden;
}

.coiffeurs .active {
    transform: scale(1.05)!important;
  }
  
.coiffeur {
    margin-left: 250px;
    margin-right: 200px;
    transform: translateX(-50%);
    transition: filter 0.3s ease-out;
}

.coiffeur:hover {
    filter: brightness(0.5);
}

.coiffeur:hover .coiffeur__name, .coiffeur:hover .coiffeur__social{
    opacity: 1;
}
/* ... */

